<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trujillo Seguro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_ayuda">Ayuda</string>
    <string name="action_crearcuenta">Crear Cuenta</string>
    <string name="action_contrasenia">Recuperar Contraseña</string>
    <string name="s_acceder">Ingresar</string>
    <string name="s_contrasenia">Contraseña</string>
    <string name="s_e_mail">   E-mail</string>
    <string name="s_recuperar">Recuperar Contraseña</string>
    <string name="s_registrar">Registrar</string>
    <string name="title_activity_main">Trujillo Seguro</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu CLosed</string>
    <string name="title_activity_registrar">Crear Cuenta</string>

    <!-- Fragment Incidencia -->
    <string name="i_title">Reportar Incidencia</string>
    <string name="i_tipo">Tipo</string>
    <string name="i_direccion">Dirección</string>
    <string name="i_go">Go</string>
    <string name="i_descripcion">Descripción</string>
    <string name="i_fecha">Fecha y Hora</string>
    <string name="i_foto">Foto</string>
    <string name="i_enviar">Enviar Incidencia</string>

    <string-array name="tipoincidencias">
        <item>Violencia Familiar</item>
        <item>Robo</item>
        <item>Pandillaje</item>
        <item>Corrupción</item>
        <item>Accidente Vehicular</item>
    </string-array>

    <string-array name="miscontactos">
        <item>Daniel Cam (996158492)</item>
        <item>Fabio Gutierrez (969937789)</item>
        <item>Lizbeth Barreto (973024250)</item>
        <item>Carlos Castañeda (943272543)</item>

    </string-array>


    <!-- Registrar Activity -->
    <string name="s_nombre">Nombre</string>
    <string name="s_movil">Teléfono</string>

    <!-- Menu Activity -->
    <string-array name="nav_drawer_items">
        <item>Alerta</item>
        <item>Incidencias</item>
        <item>Notificame</item>
        <item>Noticias</item>
        <item>Cuenta</item>
        <item>Contáctanos</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/businessman24</item>
        <item>@drawable/businessman24</item>
        <item>@drawable/businessman24</item>
        <item>@drawable/businessman24</item>
        <item>@drawable/businessman24</item>
        <item>@drawable/businessman24</item>
    </array>

    <string name="title_activity_menu">Trux App</string>
    <string name="desc_list_item_icon">Item Icon</string>



</resources>
