<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:screenOrientation="portrait"
    android:background="@drawable/background">

    <!--ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/fondo" /-->

    <TextView
        android:id="@+id/tv_bienvenido"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1b2533"
        android:textSize="42dp"
        android:gravity="center" />

    <!--com.facebook.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_registrar"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn_registrar"
        android:layout_marginBottom="20dp"
        android:paddingLeft="85dp"
        android:paddingRight="85dp"

    <TextView android:id="@+id/txt_contacts"
        android:textSize="24sp"
        android:layout_margin="8px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
                                                /-->
    <com.muni.trujilloseguro.components.MyEditText
        android:id="@+id/et_nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_bienvenido"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp"
        android:drawableLeft="@drawable/private48"
        android:ems="10"
        android:hint="@string/s_e_mail"
        android:textColor="#1b2533"
        android:layout_alignLeft="@+id/tv_bienvenido"
        android:layout_alignStart="@+id/tv_bienvenido" />




    <com.muni.trujilloseguro.components.MyEditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/private48"
        android:textColor="#706d6d"
        android:hint="@string/s_contrasenia"
        android:id="@+id/view"
        android:layout_below="@+id/et_nombre"
        android:layout_alignLeft="@+id/et_nombre"
        android:layout_alignStart="@+id/et_nombre"
        android:layout_alignRight="@+id/et_nombre"
        android:layout_alignEnd="@+id/et_nombre" />



    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#43c9cb"
        android:paddingLeft="85dp"
        android:paddingRight="85dp"
        android:text="@string/s_acceder"
        android:textColor="#eaeaea"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

</RelativeLayout>

